# netrunner

./: .gitattributes  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  justfile
.github/workflows/: ci.yml  deps-update.yml  release.yml
crates/netrunner-cli/: Cargo.toml  README.md
crates/netrunner-cli/examples/: basic_speed_test.rs  continuous_monitoring.rs  custom_configuration.rs  history_management.rs  logo_demo.rs  statistics_dashboard.rs
crates/netrunner-cli/examples/vhs/: speed-test-history.tape
crates/netrunner-cli/src/: intro.rs  lib.rs  main.rs  render.rs  stats_ui.rs  ui.rs
crates/netrunner-cli/tests/: binary_weight_tests.rs
crates/netrunner-core/: Cargo.toml  README.md
crates/netrunner-core/src/: diagnostics.rs  events.rs  history.rs  lib.rs  presentation.rs  settings.rs  speed_test.rs
crates/netrunner-core/tests/: geolocation_tests.rs  history_tests.rs  integration_tests.rs  speed_test_tests.rs  types_tests.rs
crates/netrunner-gui/: Cargo.toml  README.md
crates/netrunner-gui/src/: app.rs  engine.rs  lib.rs  main.rs  theme.rs  view.rs
scripts/: bump_version.nu  check_publish.nu  version.nu
scripts/tests/: run_all.nu  runner.nu  test_bump_version.nu  test_release_prepare.nu  test_version.nu
