[workspace]
members = [
    "crates/netrunner-core",
    "crates/netrunner-cli",
    "crates/netrunner-gui",
]
resolver = "2"

[workspace.package]
version = "0.7.3"
edition = "2021"
authors = ["Sorin Albu-Irimies <mihaiirimies@gmail.com>"]
license = "MIT"
homepage = "https://github.com/sorinirimies/netrunner"
repository = "https://github.com/sorinirimies/netrunner"

# ── Shared dependency versions ────────────────────────────────────────────────
# Single source of truth — crates reference these with `{ workspace = true }`.
[workspace.dependencies]
# Core / shared
tokio = { version = "1.50", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls-no-provider", "charset", "http2", "system-proxy"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
strum = { version = "0.28", features = ["derive"] }
strum_macros = "0.28"
rand = "0.10"
dns-lookup = "3.0"
redb = "4"
postcard = { version = "1.1", features = ["use-std"] }
dirs = "6.0"

# TUI (netrunner-cli)
clap = { version = "4.6", features = ["derive"] }
indicatif = "0.18"
colored = "3.0"
console = "0.16"
dialoguer = "0.12"
ratatui = "0.30"
crossterm = "0.29"
tachyonfx = "0.25"
humantime = "2.3"
spinners = "4.2"
byte-unit = "5.0"
ctrlc = "3.5"
async-trait = "0.1"
prettytable-rs = "0.10"
ratatui-widgets = "0.3"
tui-piechart = "0.3.1"
color-eyre = "0.6"

# GUI (netrunner-gui)
gpui = "0.2"

# Internal crates
netrunner-core = { path = "crates/netrunner-core", version = "0.7.3" }

# Dev
tempfile = "3.8"
tokio-test = "0.4"

[profile.dev]
opt-level = 0

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
